--- a/scripts/Report_draft.ipynb
+++ b/scripts/Report_draft.ipynb
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "pip install sodapy"
+    "#pip install sodapy"
    ]
   },
   {
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "pip install census"
+    "#pip install census"
    ]
   },
   {
@@ -1788,7 +1788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
