--- a/scripts/model_analysis.ipynb
+++ b/scripts/model_analysis.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -47,207 +47,75 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>model_type</th>\n",
        "      <th>clf</th>\n",
        "      <th>parameters</th>\n",
-       "      <th>split_date</th>\n",
-       "      <th>min_year_in_train</th>\n",
-       "      <th>max_year_in_train</th>\n",
-       "      <th>min_year_in_test</th>\n",
-       "      <th>max_year_in_test</th>\n",
-       "      <th>baseline</th>\n",
-       "      <th>...</th>\n",
-       "      <th>p_at_20</th>\n",
-       "      <th>recall_at_20</th>\n",
-       "      <th>f1_at_20</th>\n",
-       "      <th>p_at_30</th>\n",
-       "      <th>recall_at_30</th>\n",
-       "      <th>f1_at_30</th>\n",
-       "      <th>p_at_50</th>\n",
-       "      <th>recall_at_50</th>\n",
-       "      <th>f1_at_50</th>\n",
-       "      <th>auc-roc</th>\n",
+       "      <th>p_at_10</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>462</th>\n",
+       "      <td>LogisticRegression(C=10, class_weight=None, du...</td>\n",
+       "      <td>{'C': 0.1, 'penalty': 'l1'}</td>\n",
+       "      <td>0.556962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>LogisticRegression(C=10, class_weight=None, du...</td>\n",
+       "      <td>{'C': 0.1, 'penalty': 'l1'}</td>\n",
+       "      <td>0.556962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>DT</td>\n",
        "      <td>DecisionTreeClassifier(class_weight=None, crit...</td>\n",
        "      <td>{'criterion': 'gini', 'max_depth': 1, 'max_fea...</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>2010-01-01</td>\n",
-       "      <td>2012-01-01</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>0.100756</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.278481</td>\n",
-       "      <td>0.5500</td>\n",
-       "      <td>0.369748</td>\n",
-       "      <td>0.184874</td>\n",
-       "      <td>0.5500</td>\n",
-       "      <td>0.276730</td>\n",
-       "      <td>0.201511</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.33543</td>\n",
-       "      <td>0.749790</td>\n",
+       "      <td>0.544304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>DT</td>\n",
-       "      <td>DecisionTreeClassifier(class_weight=None, crit...</td>\n",
-       "      <td>{'criterion': 'gini', 'max_depth': 1, 'max_fea...</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>2010-01-01</td>\n",
-       "      <td>2012-01-01</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>0.100756</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.278481</td>\n",
-       "      <td>0.5500</td>\n",
-       "      <td>0.369748</td>\n",
-       "      <td>0.184874</td>\n",
-       "      <td>0.5500</td>\n",
-       "      <td>0.276730</td>\n",
-       "      <td>0.201511</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.33543</td>\n",
-       "      <td>0.749790</td>\n",
+       "      <th>113</th>\n",
+       "      <td>LogisticRegression(C=10, class_weight=None, du...</td>\n",
+       "      <td>{'C': 0.1, 'penalty': 'l2'}</td>\n",
+       "      <td>0.544304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>DT</td>\n",
+       "      <th>57</th>\n",
        "      <td>DecisionTreeClassifier(class_weight=None, crit...</td>\n",
-       "      <td>{'criterion': 'gini', 'max_depth': 1, 'max_fea...</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>2010-01-01</td>\n",
-       "      <td>2012-01-01</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>0.100756</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.278481</td>\n",
-       "      <td>0.5500</td>\n",
-       "      <td>0.369748</td>\n",
-       "      <td>0.184874</td>\n",
-       "      <td>0.5500</td>\n",
-       "      <td>0.276730</td>\n",
-       "      <td>0.201511</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.33543</td>\n",
-       "      <td>0.749790</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>DT</td>\n",
-       "      <td>DecisionTreeClassifier(class_weight=None, crit...</td>\n",
-       "      <td>{'criterion': 'gini', 'max_depth': 1, 'max_fea...</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>2010-01-01</td>\n",
-       "      <td>2012-01-01</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>0.100756</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.164557</td>\n",
-       "      <td>0.3250</td>\n",
-       "      <td>0.218487</td>\n",
-       "      <td>0.281513</td>\n",
-       "      <td>0.8375</td>\n",
-       "      <td>0.421384</td>\n",
-       "      <td>0.201511</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.33543</td>\n",
-       "      <td>0.782195</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>DT</td>\n",
-       "      <td>DecisionTreeClassifier(class_weight=None, crit...</td>\n",
-       "      <td>{'criterion': 'gini', 'max_depth': 1, 'max_fea...</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>2010-01-01</td>\n",
-       "      <td>2012-01-01</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>0.100756</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.082278</td>\n",
-       "      <td>0.1625</td>\n",
-       "      <td>0.109244</td>\n",
-       "      <td>0.142857</td>\n",
-       "      <td>0.4250</td>\n",
-       "      <td>0.213836</td>\n",
-       "      <td>0.201511</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.33543</td>\n",
-       "      <td>0.566544</td>\n",
+       "      <td>{'criterion': 'entropy', 'max_depth': 1, 'max_...</td>\n",
+       "      <td>0.544304</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 32 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0 model_type                                                clf  \\\n",
-       "0           0         DT  DecisionTreeClassifier(class_weight=None, crit...   \n",
-       "1           1         DT  DecisionTreeClassifier(class_weight=None, crit...   \n",
-       "2           2         DT  DecisionTreeClassifier(class_weight=None, crit...   \n",
-       "3           3         DT  DecisionTreeClassifier(class_weight=None, crit...   \n",
-       "4           4         DT  DecisionTreeClassifier(class_weight=None, crit...   \n",
+       "                                                   clf  \\\n",
+       "462  LogisticRegression(C=10, class_weight=None, du...   \n",
+       "112  LogisticRegression(C=10, class_weight=None, du...   \n",
+       "0    DecisionTreeClassifier(class_weight=None, crit...   \n",
+       "113  LogisticRegression(C=10, class_weight=None, du...   \n",
+       "57   DecisionTreeClassifier(class_weight=None, crit...   \n",
        "\n",
-       "                                          parameters  split_date  \\\n",
-       "0  {'criterion': 'gini', 'max_depth': 1, 'max_fea...  2013-01-01   \n",
-       "1  {'criterion': 'gini', 'max_depth': 1, 'max_fea...  2013-01-01   \n",
-       "2  {'criterion': 'gini', 'max_depth': 1, 'max_fea...  2013-01-01   \n",
-       "3  {'criterion': 'gini', 'max_depth': 1, 'max_fea...  2013-01-01   \n",
-       "4  {'criterion': 'gini', 'max_depth': 1, 'max_fea...  2013-01-01   \n",
-       "\n",
-       "  min_year_in_train max_year_in_train min_year_in_test max_year_in_test  \\\n",
-       "0        2010-01-01        2012-01-01       2013-01-01       2013-01-01   \n",
-       "1        2010-01-01        2012-01-01       2013-01-01       2013-01-01   \n",
-       "2        2010-01-01        2012-01-01       2013-01-01       2013-01-01   \n",
-       "3        2010-01-01        2012-01-01       2013-01-01       2013-01-01   \n",
-       "4        2010-01-01        2012-01-01       2013-01-01       2013-01-01   \n",
-       "\n",
-       "   baseline  ...   p_at_20  recall_at_20  f1_at_20   p_at_30  recall_at_30  \\\n",
-       "0  0.100756  ...  0.278481        0.5500  0.369748  0.184874        0.5500   \n",
-       "1  0.100756  ...  0.278481        0.5500  0.369748  0.184874        0.5500   \n",
-       "2  0.100756  ...  0.278481        0.5500  0.369748  0.184874        0.5500   \n",
-       "3  0.100756  ...  0.164557        0.3250  0.218487  0.281513        0.8375   \n",
-       "4  0.100756  ...  0.082278        0.1625  0.109244  0.142857        0.4250   \n",
-       "\n",
-       "   f1_at_30   p_at_50  recall_at_50  f1_at_50   auc-roc  \n",
-       "0  0.276730  0.201511           1.0   0.33543  0.749790  \n",
-       "1  0.276730  0.201511           1.0   0.33543  0.749790  \n",
-       "2  0.276730  0.201511           1.0   0.33543  0.749790  \n",
-       "3  0.421384  0.201511           1.0   0.33543  0.782195  \n",
-       "4  0.213836  0.201511           1.0   0.33543  0.566544  \n",
-       "\n",
-       "[5 rows x 32 columns]"
+       "                                            parameters   p_at_10  \n",
+       "462                        {'C': 0.1, 'penalty': 'l1'}  0.556962  \n",
+       "112                        {'C': 0.1, 'penalty': 'l1'}  0.556962  \n",
+       "0    {'criterion': 'gini', 'max_depth': 1, 'max_fea...  0.544304  \n",
+       "113                        {'C': 0.1, 'penalty': 'l2'}  0.544304  \n",
+       "57   {'criterion': 'entropy', 'max_depth': 1, 'max_...  0.544304  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "models = pd.read_csv(\"third_models.csv\")\n",
-    "models.head()"
+    "models = pd.read_csv(\"small_DT_RF_LR_GB_B.csv\")\n",
+    "models.sort_values('p_at_10', ascending = False)[['clf', 'parameters', 'p_at_10']].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -297,6 +165,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>model_type</th>\n",
+       "      <th>clf</th>\n",
        "      <th>split_date</th>\n",
        "      <th>p_at_10</th>\n",
        "    </tr>\n",
@@ -304,83 +173,157 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>DT</td>\n",
+       "      <td>B</td>\n",
+       "      <td>BaggingClassifier(base_estimator=None, bootstr...</td>\n",
        "      <td>2013-01-01</td>\n",
-       "      <td>0.556962</td>\n",
+       "      <td>0.455696</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>BaggingClassifier(base_estimator=None, bootstr...</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>0.417722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>B</td>\n",
+       "      <td>BaggingClassifier(base_estimator=None, bootstr...</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>0.443038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>DT</td>\n",
+       "      <td>DecisionTreeClassifier(class_weight=None, crit...</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>0.544304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DT</td>\n",
+       "      <td>DecisionTreeClassifier(class_weight=None, crit...</td>\n",
        "      <td>2014-01-01</td>\n",
        "      <td>0.468354</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>5</th>\n",
        "      <td>DT</td>\n",
+       "      <td>DecisionTreeClassifier(class_weight=None, crit...</td>\n",
        "      <td>2015-01-01</td>\n",
        "      <td>0.544304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>LR</td>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>0.556962</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>LR</td>\n",
-       "      <td>2014-01-01</td>\n",
-       "      <td>0.481013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>LR</td>\n",
-       "      <td>2015-01-01</td>\n",
-       "      <td>0.556962</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>RF</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>GradientBoostingClassifier(criterion='friedman...</td>\n",
        "      <td>2013-01-01</td>\n",
        "      <td>0.506329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>RF</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>GradientBoostingClassifier(criterion='friedman...</td>\n",
        "      <td>2014-01-01</td>\n",
-       "      <td>0.493671</td>\n",
+       "      <td>0.468354</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>RF</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>GradientBoostingClassifier(criterion='friedman...</td>\n",
        "      <td>2015-01-01</td>\n",
+       "      <td>0.544304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>LR</td>\n",
+       "      <td>LogisticRegression(C=10, class_weight=None, du...</td>\n",
+       "      <td>2013-01-01</td>\n",
+       "      <td>0.556962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>LR</td>\n",
+       "      <td>LogisticRegression(C=10, class_weight=None, du...</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>0.481013</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>LR</td>\n",
+       "      <td>LogisticRegression(C=10, class_weight=None, du...</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>0.556962</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>RF</td>\n",
+       "      <td>RandomForestClassifier(bootstrap=True, class_w...</td>\n",
+       "      <td>2013-01-01</td>\n",
        "      <td>0.493671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>RF</td>\n",
+       "      <td>RandomForestClassifier(bootstrap=True, class_w...</td>\n",
+       "      <td>2014-01-01</td>\n",
+       "      <td>0.468354</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>RF</td>\n",
+       "      <td>RandomForestClassifier(bootstrap=True, class_w...</td>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>0.506329</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  model_type  split_date   p_at_10\n",
-       "0         DT  2013-01-01  0.556962\n",
-       "1         DT  2014-01-01  0.468354\n",
-       "2         DT  2015-01-01  0.544304\n",
-       "3         LR  2013-01-01  0.556962\n",
-       "4         LR  2014-01-01  0.481013\n",
-       "5         LR  2015-01-01  0.556962\n",
-       "6         RF  2013-01-01  0.506329\n",
-       "7         RF  2014-01-01  0.493671\n",
-       "8         RF  2015-01-01  0.493671"
+       "   model_type                                                clf  split_date  \\\n",
+       "0           B  BaggingClassifier(base_estimator=None, bootstr...  2013-01-01   \n",
+       "1           B  BaggingClassifier(base_estimator=None, bootstr...  2014-01-01   \n",
+       "2           B  BaggingClassifier(base_estimator=None, bootstr...  2015-01-01   \n",
+       "3          DT  DecisionTreeClassifier(class_weight=None, crit...  2013-01-01   \n",
+       "4          DT  DecisionTreeClassifier(class_weight=None, crit...  2014-01-01   \n",
+       "5          DT  DecisionTreeClassifier(class_weight=None, crit...  2015-01-01   \n",
+       "6          GB  GradientBoostingClassifier(criterion='friedman...  2013-01-01   \n",
+       "7          GB  GradientBoostingClassifier(criterion='friedman...  2014-01-01   \n",
+       "8          GB  GradientBoostingClassifier(criterion='friedman...  2015-01-01   \n",
+       "9          LR  LogisticRegression(C=10, class_weight=None, du...  2013-01-01   \n",
+       "10         LR  LogisticRegression(C=10, class_weight=None, du...  2014-01-01   \n",
+       "11         LR  LogisticRegression(C=10, class_weight=None, du...  2015-01-01   \n",
+       "12         RF  RandomForestClassifier(bootstrap=True, class_w...  2013-01-01   \n",
+       "13         RF  RandomForestClassifier(bootstrap=True, class_w...  2014-01-01   \n",
+       "14         RF  RandomForestClassifier(bootstrap=True, class_w...  2015-01-01   \n",
+       "\n",
+       "     p_at_10  \n",
+       "0   0.455696  \n",
+       "1   0.417722  \n",
+       "2   0.443038  \n",
+       "3   0.544304  \n",
+       "4   0.468354  \n",
+       "5   0.544304  \n",
+       "6   0.506329  \n",
+       "7   0.468354  \n",
+       "8   0.544304  \n",
+       "9   0.556962  \n",
+       "10  0.481013  \n",
+       "11  0.556962  \n",
+       "12  0.493671  \n",
+       "13  0.468354  \n",
+       "14  0.506329  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "precision_summary = summary.reset_index()\n",
-    "precision_summary[['model_type', 'split_date', 'p_at_10']]"
+    "precision_summary[['model_type', 'clf', 'split_date', 'p_at_10']]"
    ]
   },
   {
@@ -1386,7 +1329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
