--- a/scripts/graphs_v2.ipynb
+++ b/scripts/graphs_v2.ipynb
@@ -55,37 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['tract', 'commarea', 'location', 'geometry', 'filing_year',\n",
-       "       'eviction_filings_total', 'eviction_filings_rate',\n",
-       "       'eviction_filings_completed', 'case_type_single_action',\n",
-       "       'case_type_joint_action',\n",
-       "       ...\n",
-       "       'total_department_bureau_SIGNS_mean_by_commarea',\n",
-       "       'total_department_bureau_SPECIAL INSPECTION PROGRAM_mean_by_commarea',\n",
-       "       'total_department_bureau_SPECIAL TASK FORCE_mean_by_commarea',\n",
-       "       'total_department_bureau_VENTILATION_mean_by_commarea',\n",
-       "       'total_department_bureau_WATER_mean_by_commarea',\n",
-       "       'total_violation_status_COMPLIED_perc_mean_by_commarea',\n",
-       "       'total_violation_status_NO ENTRY_perc_mean_by_commarea',\n",
-       "       'total_violation_status_OPEN_perc_mean_by_commarea',\n",
-       "       'total_inspection_category_COMPLAINT_perc_mean_by_commarea',\n",
-       "       'perc_increase_bv_mean_by_commarea'],\n",
-       "      dtype='object', length=282)"
+       "(6375, 282)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "eviction_df.eviction"
+    "eviction_df.shape"
    ]
   },
   {
@@ -231,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evictions filings rate per year"
+    "### Evictions filings rate and eviction order yes per year"
    ]
   },
   {
