--- a/scripts/model_analysis.ipynb
+++ b/scripts/model_analysis.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,123 +31,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Baseline construction"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>split_date</th>\n",
-       "      <th>p_at_10</th>\n",
-       "      <th>model_type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2010-01-01</td>\n",
-       "      <td>0.056180</td>\n",
-       "      <td>Baseline</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2011-01-01</td>\n",
-       "      <td>0.053683</td>\n",
-       "      <td>Baseline</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2012-01-01</td>\n",
-       "      <td>0.057428</td>\n",
-       "      <td>Baseline</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2013-01-01</td>\n",
-       "      <td>0.054931</td>\n",
-       "      <td>Baseline</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2014-01-01</td>\n",
-       "      <td>0.047441</td>\n",
-       "      <td>Baseline</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2015-01-01</td>\n",
-       "      <td>0.054931</td>\n",
-       "      <td>Baseline</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2016-01-01</td>\n",
-       "      <td>0.048689</td>\n",
-       "      <td>Baseline</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2017-01-01</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Baseline</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   split_date   p_at_10 model_type\n",
-       "0  2010-01-01  0.056180   Baseline\n",
-       "1  2011-01-01  0.053683   Baseline\n",
-       "2  2012-01-01  0.057428   Baseline\n",
-       "3  2013-01-01  0.054931   Baseline\n",
-       "4  2014-01-01  0.047441   Baseline\n",
-       "5  2015-01-01  0.054931   Baseline\n",
-       "6  2016-01-01  0.048689   Baseline\n",
-       "7  2017-01-01  0.000000   Baseline"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "baseline = pd.read_csv('baseline.csv')\n",
-    "baseline.rename(columns={'filing_year': 'split_date', 'correct_with_baseline': 'p_at_10'}, inplace=True)\n",
-    "baseline['model_type'] = 'Baseline'\n",
-    "baseline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +61,7 @@
        "(652, 32)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +318,7 @@
        "1   0.430380  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 117,
    "metadata": {
     "scrolled": true
    },
@@ -525,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +732,7 @@
        "           2014-01-01  0.292887  0.201005  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1106,7 @@
        "           2014-01-01        0.7125        0.8750        1.0000  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1437,7 @@
        "           2014-01-01  0.438871  0.334728  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1561,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1580,7 @@
        "[2 rows x 32 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1699,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -1709,7 +1603,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1727,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1717,7 @@
        "[1 rows x 32 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1836,16 +1730,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([\"{'C': 0.1, 'penalty': 'l1'}\"], dtype=object)"
+       "array([\"{'max_depth': 50, 'max_features': 'sqrt', 'min_samples_split': 10, 'n_estimators': 10000, 'n_jobs': -1}\"],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1853,13 +1748,6 @@
    "source": [
     "highest_auc['parameters'].values"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
